--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
         <span class="brand-name">Mendoza Studio</span>
 
         <nav class="nav">
-            <a href="#">Inicio</a>
-            <a href="#">Portafolio</a>
-            <a href="#">Acerca de mi</a>
-            <a href="#">Contacto</a>
+            <a href="index.html">Inicio</a>
+            <a href="portfolio.html">Portafolio</a>
+            <!-- <a href="about-me.html">Acerca de mi</a> -->
+            <a href="https://www.instagram.com/e_mendozaphotografy/">Contacto</a>
         </nav>
     </header>
 
@@ -61,7 +61,7 @@
         </div>
         <div class="project-item">
             <div class="project-item_img">
-                <img src="assets/img/realone/image00044.jpeg" alt="titulo-proyecto">
+                <img src="assets/img/real/image00044-min.jpeg" alt="titulo-proyecto">
             </div>
             <div class="project-item_hover">
                 <div class="project-item_content">
@@ -83,7 +83,7 @@
         </div>
         <div class="project-item">
             <div class="project-item_img">
-                <img src="assets/img/realone/image00012.jpeg" alt="titulo-proyecto">
+                <img src="assets/img/real/image00012-min.jpeg" alt="titulo-proyecto">
             </div>
             <div class="project-item_hover">
                 <div class="project-item_content">
